Add checkbox and add/remove elements pages with test cases
- Add AddRemoveElementsPage with self-healing locators and dynamic button verification
- Add CheckboxPage for checkbox toggle interactions
- Add Cucumber step definitions and feature files for both pages
- Add RunCucumberTest runner class for Maven Surefire
- Add .gitignore and CLAUDE.md project instructions
- Remove tracked target/ build artifacts

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>